# weather-station

./: .gitignore  README.md
demeter/: platformio.ini
demeter/src/: main.cpp
panopticon/: .gitignore  app.py  consumer.py  panopt.py  pyproject.toml  schema.sql
panopticon/.devcontainer/: RabbitMQ_Dockerfile  devcontainer.json  docker-compose.yml
panopticon/.devcontainer/rabbitmq/: rabbitmq.conf
panopticon/docker/: Consumer.Dockerfile  MqttBroker.Dockerfile  Panopticon.Dockerfile  docker-compose.yml
